use the new rewriter for our addons

--- a/addons/Makefile
+++ b/addons/Makefile
@@ -31,7 +31,7 @@ hubble:
 	  >> $(OUTPUT_FILE)
 	cat hubble/_extras.txt >> $(OUTPUT_FILE)
 	cat hubble/_footer.txt >> $(OUTPUT_FILE)
-	sed -i 's/quay.io/{{ Registry "quay.io" }}/g' $(OUTPUT_FILE)
+	./templatify-images.sh $(OUTPUT_FILE)
 
 .PHONY: aws-node-termination-handler
 aws-node-termination-handler: OUTPUT_FILE=aws-node-termination-handler/aws-node-termination-handler.yaml
@@ -45,7 +45,7 @@ aws-node-termination-handler:
 	  --values values-aws-node-termination-handler.yaml \
 	  >> $(OUTPUT_FILE)
 	cat aws-node-termination-handler/_footer.txt >> $(OUTPUT_FILE)
-	sed -i 's/public.ecr.aws/{{ Registry "public.ecr.aws" }}/g' $(OUTPUT_FILE)
+	./templatify-images.sh $(OUTPUT_FILE)
 
 .PHONY: aws-ebs-csi-driver
 aws-ebs-csi-driver: OUTPUT_FILE=csi/aws-ebs/driver.yaml
@@ -68,4 +68,4 @@ metallb: OUTPUT_FILE=metallb/00_metallb.yaml
 metallb:
 	cat metallb/_header.txt > $(OUTPUT_FILE)
 	wget -q -O- https://raw.githubusercontent.com/metallb/metallb/v0.13.3/config/manifests/metallb-native.yaml >> $(OUTPUT_FILE)
-	sed -i 's/quay.io/{{ Registry "quay.io" }}/g' $(OUTPUT_FILE)
+	./templatify-images.sh $(OUTPUT_FILE)
