--- a/addons/csi/openstack/nodeplugin.yaml
+++ b/addons/csi/openstack/nodeplugin.yaml
@@ -54,7 +54,7 @@ spec:
       hostNetwork: true
       containers:
         - name: node-driver-registrar
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-node-driver-registrar:v2.5.0'
+          image: '{{ Image "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.5.0" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
@@ -78,7 +78,7 @@ spec:
             - name: registration-dir
               mountPath: /registration
         - name: liveness-probe
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/livenessprobe:v2.6.0'
+          image: '{{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.6.0" }}'
           args:
             - --csi-address=/csi/csi.sock
           volumeMounts:
@@ -90,7 +90,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: '{{ Registry "docker.io" }}/k8scloudprovider/cinder-csi-plugin:{{ $version }}'
+          image: '{{ Image (print "k8scloudprovider/cinder-csi-plugin:" $version) }}'
           args:
             - /bin/cinder-csi-plugin
             - "--nodeid=$(NODE_ID)"
