--- a/addons/aws-node-termination-handler/aws-node-termination-handler.yaml
+++ b/addons/aws-node-termination-handler/aws-node-termination-handler.yaml
@@ -226,7 +226,7 @@ spec:
             runAsGroup: 1000
             runAsNonRoot: true
             runAsUser: 1000
-          image: {{ Registry "public.ecr.aws" }}/aws-ec2/aws-node-termination-handler:v1.16.2
+          image: {{ Image "public.ecr.aws/aws-ec2/aws-node-termination-handler:v1.16.2" }}
           imagePullPolicy: IfNotPresent
           env:
             - name: NODE_NAME
