--- a/addons/cluster-autoscaler/cluster-autoscaler.yaml
+++ b/addons/cluster-autoscaler/cluster-autoscaler.yaml
@@ -176,7 +176,7 @@ spec:
         app: cluster-autoscaler
     spec:
       containers:
-      - image: '{{ Registry "registry.k8s.io" }}/autoscaling/cluster-autoscaler:{{ $version }}'
+      - image: '{{ Image (print "registry.k8s.io/autoscaling/cluster-autoscaler:" $version) }}'
         name: cluster-autoscaler
         command:
         - /cluster-autoscaler
