--- a/addons/csi/azure-file/csi-azurefile-controller.yaml
+++ b/addons/csi/azure-file/csi-azurefile-controller.yaml
@@ -49,7 +49,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: csi-provisioner
-          image: {{ Registry "mcr.microsoft.com" }}/oss/kubernetes-csi/csi-provisioner:v3.1.0
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-provisioner:v3.1.0" }}
           args:
             - "-v=2"
             - "--csi-address=$(ADDRESS)"
@@ -70,7 +70,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: csi-attacher
-          image: {{ Registry "mcr.microsoft.com" }}/oss/kubernetes-csi/csi-attacher:v3.4.0
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-attacher:v3.4.0" }}
           args:
             - "-v=2"
             - "-csi-address=$(ADDRESS)"
@@ -90,7 +90,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: csi-snapshotter
-          image: {{ Registry "mcr.microsoft.com" }}/oss/kubernetes-csi/csi-snapshotter:v5.0.1
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-snapshotter:v5.0.1" }}
           args:
             - "-v=2"
             - "-csi-address=$(ADDRESS)"
@@ -109,7 +109,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: csi-resizer
-          image: {{ Registry "mcr.microsoft.com" }}/oss/kubernetes-csi/csi-resizer:v1.4.0
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/csi-resizer:v1.4.0" }}
           args:
             - "-csi-address=$(ADDRESS)"
             - "-v=2"
@@ -131,7 +131,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: liveness-probe
-          image: {{ Registry "mcr.microsoft.com" }}/oss/kubernetes-csi/livenessprobe:v2.6.0
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/livenessprobe:v2.6.0" }}
           args:
             - --csi-address=/csi/csi.sock
             - --probe-timeout=3s
@@ -147,7 +147,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: azurefile
-          image: {{ Registry "mcr.microsoft.com" }}/k8s/csi/azurefile-csi:v{{ $version }}
+          image: {{ Image (print "mcr.microsoft.com/k8s/csi/azurefile-csi:v" $version) }}
           imagePullPolicy: IfNotPresent
           args:
             - "--v=5"
