--- a/addons/csi/digitalocean/csi-driver.yaml
+++ b/addons/csi/digitalocean/csi-driver.yaml
@@ -64,7 +64,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: csi-provisioner
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-provisioner:v3.2.1'
+          image: '{{ Image "registry.k8s.io/sig-storage/csi-provisioner:v3.2.1" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--default-fstype=ext4"
@@ -77,7 +77,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-attacher
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-attacher:v3.5.0'
+          image: '{{ Image "registry.k8s.io/sig-storage/csi-attacher:v3.5.0" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--v=5"
@@ -91,7 +91,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-snapshotter
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-snapshotter:v6.0.1'
+          image: '{{ Image "registry.k8s.io/sig-storage/csi-snapshotter:v6.0.1" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--v=5"
@@ -103,7 +103,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-resizer
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-resizer:v1.5.0'
+          image: '{{ Image "registry.k8s.io/sig-storage/csi-resizer:v1.5.0" }}'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--timeout=30s"
@@ -118,7 +118,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-do-plugin
-          image: '{{ Registry "docker.io" }}/digitalocean/do-csi-plugin:v4.2.0'
+          image: '{{ Image "digitalocean/do-csi-plugin:v4.2.0" }}'
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--token=$(DIGITALOCEAN_ACCESS_TOKEN)"
@@ -321,7 +321,7 @@ spec:
         # devices briefly and may conflict with CSI-managed droplets (leading to
         # "resource busy" errors). We can safely delete it in DOKS.
         - name: automount-udev-deleter
-          image: '{{ Registry "docker.io" }}/alpine:3'
+          image: '{{ Image "alpine:3" }}'
           args:
             - "rm"
             - "-f"
@@ -331,7 +331,7 @@ spec:
               mountPath: /etc/udev/rules.d/
       containers:
         - name: csi-node-driver-registrar
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-node-driver-registrar:v2.5.1'
+          image: '{{ Image "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.5.1" }}'
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
@@ -355,7 +355,7 @@ spec:
             - name: registration-dir
               mountPath: /registration/
         - name: csi-do-plugin
-          image: '{{ Registry "docker.io" }}/digitalocean/do-csi-plugin:v4.2.0'
+          image: '{{ Image "digitalocean/do-csi-plugin:v4.2.0" }}'
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--url=$(DIGITALOCEAN_API_URL)"
