--- a/addons/csi/openstack/snapshot-webhook.yaml
+++ b/addons/csi/openstack/snapshot-webhook.yaml
@@ -20,7 +20,6 @@
 #   - change webhook-certs secret name
 #   - add seccomp profile
 
-
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "openstack" }}
 
@@ -46,7 +45,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: snapshot-validation
-          image: '{{ Registry "registry.k8s.io" }}/sig-storage/snapshot-validation-webhook:v5.0.1' # change the image if you wish to use your own custom validation server image
+          image: '{{ Image "registry.k8s.io/sig-storage/snapshot-validation-webhook:v5.0.1" }}' # change the image if you wish to use your own custom validation server image
           imagePullPolicy: IfNotPresent
           args: ['--tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem', '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem']
           ports:
