--- a/addons/csi/vsphere/snapshot-controller.yaml
+++ b/addons/csi/vsphere/snapshot-controller.yaml
@@ -151,7 +151,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: snapshot-controller
-          image: {{ Registry "registry.k8s.io" }}/sig-storage/snapshot-controller:v5.0.1
+          image: {{ Image "registry.k8s.io/sig-storage/snapshot-controller:v5.0.1" }}
           args:
             - "--v=5"
             - "--leader-election=true"
