--- a/addons/kube-state-metrics/deployment.yaml
+++ b/addons/kube-state-metrics/deployment.yaml
@@ -42,7 +42,7 @@ spec:
             - --port=8081
             - --telemetry-host=127.0.0.1
             - --telemetry-port=8082
-          image: '{{ Registry "registry.k8s.io" }}/kube-state-metrics/kube-state-metrics:v2.1.1'
+          image: '{{ Image "registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.1.1" }}'
           name: kube-state-metrics
           resources:
             limits:
@@ -58,7 +58,7 @@ spec:
             - --secure-listen-address=:8443
             - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
             - --upstream=http://127.0.0.1:8081/
-          image: '{{ Registry "quay.io" }}/brancz/kube-rbac-proxy:v0.11.0'
+          image: '{{ Image "quay.io/brancz/kube-rbac-proxy:v0.11.0" }}'
           name: kube-rbac-proxy
           ports:
             - containerPort: 8443
