--- a/addons/csi/digitalocean/csi-driver.yaml
+++ b/addons/csi/digitalocean/csi-driver.yaml
@@ -137,7 +137,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-do-plugin
-          image: '{{ Image (printf "digitalocean/do-csi-plugin:" $version) }}'
+          image: '{{ Image (print "digitalocean/do-csi-plugin:" $version) }}'
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--token=$(DIGITALOCEAN_ACCESS_TOKEN)"
@@ -374,7 +374,7 @@ spec:
             - name: registration-dir
               mountPath: /registration/
         - name: csi-do-plugin
-          image: '{{ Image (printf "digitalocean/do-csi-plugin:" $version) }}'
+          image: '{{ Image (print "digitalocean/do-csi-plugin:" $version) }}'
           args :
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--url=$(DIGITALOCEAN_API_URL)"
