--- a/charts/mla/minio/values.yaml
+++ b/charts/mla/minio/values.yaml
@@ -26,9 +26,13 @@ minio:
   ## process used to create secret for prometheus ServiceMonitor).
   ##
   helmKubectlJqImage:
-    repository: bskim45/helm-kubectl-jq
+    repository: docker.io/bskim45/helm-kubectl-jq
     tag: 3.1.0
     pullPolicy: IfNotPresent
+  mcImage:
+    repository: docker.io/minio/mc
+  image:
+    repository: docker.io/minio/minio
   ## minio server mode, i.e. standalone or distributed.
   ## Distributed Minio ref: https://docs.minio.io/docs/distributed-minio-quickstart-guide
   ##
